Test/git-issues/git-issue-3410/git-issue-3410g.dfy.expect
git-issue-3410g.dfy(5,11): Error: :expect attribute may have at most one argument
1 resolution/type errors detected in git-issue-3410g.dfy
